Fix for .type-xxl on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,9 @@ img {
   font-size: 3.13em;
   font-weight: 600;
   line-height: 1.25; }
+  @media (max-width: 624px) {
+    .type-xxl {
+      font-size: 2.25em; } }
 
 .type-xl {
   font-size: 2.25em; }
